--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.7",
     "buffer": "^6.0.3",
     "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "postcss": "^8.4.35",
